--- a/index.html
+++ b/index.html
@@ -79,15 +79,16 @@
 				<div class="header-text">
 					<h1>Ravi Shanker Kushwaha</h1>
 					<p><strong>Web developer & ML enthusiast</strong></p>
-					<p>Do you want to make your website...</p>
+					<p>Crafting Secure and Functional Websites for Your Business</p>
 					<a href="#contact" class="button contact-button">Contact me</a>
 					<div class="header-socials">
 						<div class="social-links">
-							<a target="_blank" href="https://twitter.com/rsk__2002/" class="social-icon"><i class="fab fa-twitter"></i></a>
-							<a target="_blank" href="https://github.com/rsk-2002/" class="social-icon"><i class="fab fa-github"></i></a>
+							<a target="_blank" href="https://x.com/devrsk_v1/" class="social-icon"><i class="fab fa-twitter"></i></a>
+							<!-- <a target="_blank" href="https://github.com/rsk-2002/" class="social-icon"><i class="fab fa-github"></i></a> -->
 							<a target="_blank" href="https://instagram.com/rsk_2002/" class="social-icon"><i class="fab fa-instagram"></i></a>
-							<a target="_blank" href="https://codepen.io/rsk_2002" class="social-icon"><i class="fab fa-codepen"></i></a>
-							<a target="_blank" href="https://linkedin.com/in//rsk2002/" class="social-icon"><i class="fab fa-linkedin"></i></a>
+							<!-- <a target="_blank" href="https://codepen.io/rsk_2002" class="social-icon"><i class="fab fa-codepen"></i></a> -->
+							<a target="_blank" href="https://linkedin.com/in/rsk2002/" class="social-icon"><i class="fab fa-linkedin"></i></a>
+							<a target="_blank" href="mailto:ravishankerk48@gmail.com" class="social-icon"><i class="fa fa-envelope"></i></a>
 						</div>
 					</div>
 				</div>
@@ -129,15 +130,15 @@
 					<p>JavaScript</p>
 				</div>
 				<div class="skill">
-					<img src="images/python.png" alt="JavaScript">
+					<img src="images/python.png" alt="Python">
 					<p>Python</p>
 				</div>
 				<div class="skill">
-					<img src="images/django.png" alt="JavaScript">
+					<img src="images/django.png" alt="Django">
 					<p>Django</p>
 				</div>
 				<div class="skill">
-					<img src="images/git.png" alt="JavaScript">
+					<img src="images/git.png" alt="Git">
 					<p>Git</p>
 				</div>
 			</div>
@@ -253,29 +254,24 @@
 
 	<section class="contact-section" id="contact">
 		<div class="container">
-			<h2>Contact me</h2>
-			<p>Contact me today, and get reply with in 24 hours!</p>
-			<form id="contact-form" action="https://formspree.io/f/xqkoekjd" method="post">
-				<div class="form-group">
-					<label for="name">Name:</label>
-					<input type="text" id="name" name="name" required placeholder="Your name...">
-				</div>
-				<div class="form-group">
-					<label for="email">Email:</label>
-					<input type="email" id="email" name="email" required placeholder="Your email...">
-				</div>
-				<div class="form-group">
-					<label for="subject">Subject:</label>
-					<input type="text" id="subject" name="subject" required placeholder="Subject...">
-				</div>
-				<div class="form-group">
-					<label for="message">Message:</label>
-					<textarea id="message" name="message" rows="4" required placeholder="Message..."></textarea>
-				</div>
-				<button type="submit" class="button submit-button">Send Message</button>
-			</form>
+			<h2>Contact</h2>
+			<p>DM me for any query</p>
+			<div class="social-icons">
+				<a href="https://instagram.com/rsk_2002" target="_blank" class="icon-box">
+					<img src="assets/icons/instagram.svg" alt="Instagram">
+				</a>
+				<a href="https://linkedin.com/in/rsk2002" target="_blank" class="icon-box">
+					<img src="assets/icons/linkedin.svg" alt="LinkedIn">
+				</a>
+				<a href="https://x.com/devrsk_v1" target="_blank" class="icon-box">
+					<img src="assets/icons/twitter.svg" alt="Twitter">
+				</a>
+				<a href="mailto:ravishankerk48@gmail.com" class="icon-box">
+					<img src="assets/icons/email.svg" alt="Email">
+				</a>
+			</div>
 		</div>
-	</section>
+	</section>	
 
 
 	<footer class="footer">
@@ -283,12 +279,13 @@
 			<div class="footer-content">
 				<div class="social-links">
 					<!-- <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a> -->
-					<a target="_blank" href="https://twitter.com/rsk__2002/" class="social-icon"><i class="fab fa-x">X</i></a>
+					<a target="_blank" href="https://x.com/devrsk_v1/" class="social-icon"><i class="fab fa-x">X</i></a>
 					<a target="_blank" href="https://github.com/rsk-2002/" class="social-icon"><i class="fab fa-github"></i></a>
 					<a target="_blank" href="https://instagram.com/rsk_2002/" class="social-icon"><i class="fab fa-instagram"></i></a>
 					<a target="_blank" href="https://codepen.io/rsk_2002" class="social-icon"><i class="fab fa-codepen"></i></a>
+					<a target="_blank" href="mailto:ravishankerk48@gmail.com" class="social-icon"><i class="fa fa-envelope"></i></a>
 				</div>
-				<p>&copy; 2023 rsk. All rights reserved.</p>
+				<p>&copy; <span id="current-year"></span> rsk. All rights reserved.</p>
 			</div>
 		</div>
 	</footer>
