--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<div class="header-content">
 				<div class="header-text">
 					<h1>Ravi Shanker Kushwaha</h1>
-					<p><strong>Web developer & ML enthusiast</strong></p>
+					<p><strong>Web developer</strong></p>
 					<p>Crafting Secure and Functional Websites for Your Business</p>
 					<a href="#contact" class="button contact-button">Contact me</a>
 					<div class="header-socials">
